# quantum-resistant-blockchain

./: .gitignore  CHANGELOG.md  README.md  main.py  pyproject.toml  qr_chain_classical_migration_backend_rsa.py  qr_chain_classical_migration_backend_secp256k1.py  requirements-oqs.txt
crates/qr_chain_native_signer/: Cargo.toml  README.md  build.rs
crates/qr_chain_native_signer/src/: lib.rs
docs/: OQS_RUNTIME.md
qr_blockchain/: __init__.py  api.py  auth.py  chaos.py  cli.py  config.py  core.py  crypto.py  currency.py  custody.py  lamport.py  legacy_networks.py  migration.py  models.py  native_crypto.py  network.py  protocol.py  service.py  signer.py  snapshot.py  source_ingestion.py  storage.py  verification.py  wallet_store.py
qr_chain_lms_backend/: __init__.py  contract.py  oqs_backend.py
qr_chain_mldsa_backend/: __init__.py  oqs_backend.py
qr_chain_native_signer/: __init__.py
qr_chain_sphincsplus_backend/: contract.py  oqs_backend.py
qr_chain_xmss_backend/: __init__.py  contract.py  module_backend.py  oqs_backend.py  reference_backend.py
tests/: test_adversarial.py  test_cli.py  test_config.py  test_crypto.py  test_currency.py  test_legacy_networks.py  test_migration.py  test_migration_load.py  test_node_service.py  test_snapshot.py  test_source_ingestion.py
