[project]
name = "quantum-resistant-blockchain"
version = "0.2.0"
description = "Phase-1 service architecture for a quantum-resistant blockchain prototype"
requires-python = ">=3.11"

[project.scripts]
qr-chain = "qr_blockchain.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
