[project]
name = "quantum-resistant-blockchain"
version = "0.2.0"
description = "Post-quantum-oriented blockchain node with QBC economics and classical-to-PQ migration tooling"
requires-python = ">=3.11"

[project.scripts]
qr-chain = "qr_blockchain.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
